# enowars8-service-replme

./: .gitignore  README.md  flake.nix
.github/workflows/: enochecker_test.yml
checker/: .dockerignore  Dockerfile  Dockerfile.crc32  checker.py  crc32.go  docker-compose.yml  exploit.py  gunicorn.conf.py  noise.py  pyproject.toml  util.py
checker/src/: checker.py  exploit.py  gunicorn.conf.py  noise.py  util.py
documentation/: README.md  crc.sage
documentation/benchmark/: main.py  wireshark.json
documentation/crc/: crc.c  crc.go  crc.js  crc.sage  crc32.py
documentation/documentation/: Makefile
documentation/exploit/: exploit.py  main.py  util.py
documentation/frontend/: build-html.js  package-lock.json
documentation/iisc-enowars-slides/: Makefile
documentation/iisc-test-ctf-slides/: Makefile  slides.txt
documentation/image-js/: package-lock.json  package.json  tsconfig.json
documentation/image-rs/: Cargo.toml  Dockerfile  projects.txt
documentation/image-rs/src/: lib.rs  main.rs
documentation/image-rs/src/handlers/: auth.rs  mod.rs  term.rs
documentation/image-rs/src/middlewares/: api.rs  auth.rs
documentation/image-rs/src/services/: mod.rs  term.rs  user.rs
documentation/infra/: api.txt
ptwhy/: Dockerfile  package-lock.json  package.json  server.js
scripts/: crc.c  crc.out  crc.py  crc.sage  crc.zlib.c
server/: go.mod  go.sum  main.go  package-lock.json  tailwind.config.js  webpack.config.js
server/client/: components.templ  components_templ.go  (+2 more)
service/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
(+165 files in other folders)
