[tool.poetry]
name = "checker"
version = "0.1.0"
description = ""
authors = ["Jacob Bachmann <jacob.bachmann@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
enochecker3 = "^0.8.1"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
enochecker-cli = "^0.7.0"
enochecker-test = "^0.9.0"
sympy = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

