[package]
name = "image-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.7.0"
actix-web-actors = "4.3.0"
env_logger = "0.11.3"
futures = { version = "0.3.30", features = ["bilock"] }
futures-util = "0.3.30"
log = "0.4.21"
mio = { version = "1.0.0", features = ["os-ext", "os-poll"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["signal"] }
tokio-pty-process = "0.4.0"
tokio-util = { version = "0.7.11", features = ["codec"] }

